# wasserdaten

./: LICENSE  README.md
arduino/: README.md  arduino.ino
nodemcu/: README.md  nodemcu.ino
nodemcu/lib/web/: config.h
rocketship/: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  env.sample
rocketship/migrations/2020-03-02-171044_create_measurements/: down.sql  up.sql
rocketship/migrations/2020-03-03-124633_create_measurement_pairs/: down.sql  up.sql
rocketship/src/: catchers.rs  delete_measurement.rs  handlers.rs  lib.rs  measurement.rs  server.rs  show_measurement.rs  write_measurement.rs
rocketship/src/lib/: handlers.rs  measurement.rs  mod.rs  models.rs  schema.rs
rocketship/templates/: 404.html.tera  base.html.tera  index.html.tera
sensor-calibration-sketches/: readme.md
sensor-calibration-sketches/ec/: ec.ino
sensor-calibration-sketches/esp-test/: esp-test.ino
sensor-calibration-sketches/orp/: orp.ino
sensor-calibration-sketches/ph/: ph.ino
sensor-calibration-sketches/serial-communication/nodemcu/: nodemcu.ino
sensor-calibration-sketches/turbidity/: turbidity.ino
sinatraserver/: Gemfile  README.md  app.rb
sketches/: readme.md
sketches/serial-communication/arduino/: arduino.ino
