[package]
name = "rocketship"
version = "0.1.0"
authors = ["lislis <mail@lislis.de>"]
edition = "2018"

[lib]
name = "rocketlib"
path = "src/lib/mod.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "show_measurement"
path = "src/show_measurement.rs"

[[bin]]
name = "write_measurement"
path = "src/write_measurement.rs"


[dependencies]
chrono = { version = "0.4", features = ["serde", "rustc-serialize"]} 
diesel = { version = "1.0.0", features = ["postgres", "chrono"] }
dotenv = "0.9.0"
itertools = "0.8"
rocket = "0.4.2"
serde = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json", "tera_templates"]
